--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -30,6 +30,7 @@
   {% if author.youtube %}<a href="https://youtube.com/user/{{ author.youtube }}" class="author-social" target="_blank"><i class="fa fa-fw fa-youtube-square"></i> Youtube</a>{% endif %}
   {% if author.soundcloud %}<a href="http://soundcloud.com/{{ author.soundcloud }}" class="author-social" target="_blank"><i class="fa fa-fw fa-soundcloud"></i> Soundcloud</a>{% endif %}
   {% if author.bandcamp %}<a href="http://{{ author.bandcamp }}.bandcamp.com/" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Bandcamp</a>{% endif %}
+  {% if author.bandcamp %}<a href="http://{{ author.bandcamp }}.bandcamp.com/" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Bandcamp</a>{% endif %}
   {% if author.weibo %}<a href="http://www.weibo.com/{{ author.weibo }}" class="author-social" target="_blank"><i class="fa fa-fw fa-weibo"></i> Weibo</a>{% endif %}
   {% if author.flickr %}<a href="http://www.flickr.com/{{ author.flickr }}" class="author-social" target="_blank"><i class="fa fa-fw fa-flickr"></i> Flickr</a>{% endif %}
   {% if author.codepen %}<a href="http://codepen.io/{{ author.codepen }}" class="author-social" target="_blank"><i class="fa fa-fw fa-codepen"></i> CodePen</a>{% endif %}
