--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -27,8 +27,8 @@
 
   {% if author.lastfm %}<a href="http://lastfm.com/user/{{ author.lastfm }}" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Last.fm</a>{% endif %}
   {% if author.soundcloud %}<a href="http://soundcloud.com/{{ author.soundcloud }}" class="author-social" target="_blank"><i class="fa fa-fw fa-soundcloud"></i> Soundcloud</a>{% endif %}
-  {% if author.bandcamp.havens %}<a href="http://{{ author.bandcamp.havens }}.bandcamp.com/" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Havens - Bandcamp</a>{% endif %}
-  {% if author.bandcamp.wilderhost %}<a href="http://{{ author.bandcamp.wilderhost }}.bandcamp.com/" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Wilderhost - Bandcamp</a>{% endif %}
+  {% if author.bandcamp.havens %}<a href="http://{{ author.bandcamp.havens }}.bandcamp.com/" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Havens (Bandcamp)</a>{% endif %}
+  {% if author.bandcamp.wilderhost %}<a href="http://{{ author.bandcamp.wilderhost }}.bandcamp.com/" class="author-social" target="_blank"><i class="fa fa-fw fa-music"></i> Wilderhost (Bandcamp)</a>{% endif %}
 
   {% if author.flickr %}<a href="http://www.flickr.com/{{ author.flickr }}" class="author-social" target="_blank"><i class="fa fa-fw fa-flickr"></i> Flickr</a>{% endif %}
 </div>
